# ray_trace_pb

./: .gitignore  2021_10_06_ray_trace_system.py  2021_10_28_test_perfect_lens_phase.py  2022_01_14_ray_trace_seidel.py  2022_01_25_ray_trace_ideal_opm.py  README.md  pyproject.toml  ray_trace.py  setup.py
docs/: conf.py  index.rst  materials.rst  raytrace.rst
raytrace/: materials.py  raytrace.py
scripts/: 2021_07_18_ACT508-200-A.py  2021_07_25_mirror.py  2021_10_06_ray_trace_system.py  2021_10_28_test_perfect_lens_phase.py  2022_01_14_ray_trace_seidel.py  2022_01_15_phase_from_ray_directions.py  2022_01_15_thin_lens_seidel.py  2022_01_25_ray_trace_ideal_opm.py  2022_02_06_perfect_imaging_system_psf.py  2022_02_07_ray_trace_ideal_opm_psf.py  2022_08_04_ACT508-100-B.py  2022_08_24_relay_astigmatism.py  2022_08_25_relay_chromatic_shift.py  2022_09_26_odt_spherical_aberration.py  2022_10_27_plano_convex_lens.py  2024_04_01_lightsheet.py  2024_08_08_achromat_imaging.py  2024_08_13_cardinal_pts.py  2024_08_19_seidel_aberrations.py  2024_08_20_seidel_aberrations_doublet.py  2024_08_28_perfect_lens_pupil_translation.py
src/raytrace/: materials.py  raytrace.py
tests/: rt_unittest.py
